Removed nfd include from makefile

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 GXX = gcc
-INC = -I ../include -I /home/ferni/nfd/src/include
+INC = -I ../include
 FLAGS = -O3 `pkg-config --cflags --libs sdl2 SDL2_mixer`
 
 emu:
