Changed main.cpp to main.c

--- a/src/makefile
+++ b/src/makefile
@@ -3,4 +3,4 @@ INC = -I ../include
 FLAGS = -O3 `pkg-config --cflags --libs sdl2 SDL2_mixer`
 
 emu:
-	${GXX} ${INC} main.cpp ${FLAGS} -o emu
+	${GXX} ${INC} main.c ${FLAGS} -o emu
